Make Character Builder More Modular
This refactor makes it easier to add new wizard pages by adding common
tracking, common navigation, and moving common code outside of the pages
themselves. Also adds some basic security features.

--- a/public/builder.html
+++ b/public/builder.html
@@ -19,13 +19,14 @@
       </div>
     </div>
 
-    <main class="builder">
+    <main class="builder" data-builder-step="basics">
       <header class="builderHeader">
         <div>
           <h1>Character Builder</h1>
           <p class="muted" id="status">Loading…</p>
           <p class="error" id="error" style="display:none"></p>
         </div>
+		<div id="builderNav"></div>
       </header>
 
       <section class="card">
