--- a/public/builder.html
+++ b/public/builder.html
@@ -26,17 +26,27 @@
           <p class="muted" id="status">Loading…</p>
           <p class="error" id="error" style="display:none"></p>
         </div>
-		<div id="builderNav"></div>
+        <div id="builderNav"></div>
       </header>
 
       <section class="card">
-        <h2>Step 1 — Basics</h2>
+        <h2>Step 1 — Name + Profile</h2>
 
         <div class="grid2">
           <div>
             <label class="label" for="charName">Character Name</label>
             <input id="charName" class="input" type="text" maxlength="64" placeholder="e.g., Kazuma" />
             <p class="help">This is the name shown on the character list and the sheet.</p>
+
+            <div style="margin-top: 14px;">
+              <label class="label" for="level">Level</label>
+              <select id="level" class="input">
+                <option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option>
+                <option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option>
+                <option value="9">9</option><option value="10">10</option><option value="11">11</option><option value="12">12</option>
+              </select>
+              <p class="help">You can change this later. Class features and feats will be shown up to your level.</p>
+            </div>
           </div>
 
           <div>
@@ -52,124 +62,6 @@
                 <p class="help">Stored in Firebase Cloud Storage (not Firestore). Selecting a file does <em>not</em> upload until you click Upload or Save.</p>
               </div>
             </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="card">
-        <h2>Step 2 — Level &amp; Attributes</h2>
-
-        <p class="help">Attributes are grouped by type. Hover or focus the ⓘ icons for what each attribute does mechanically.</p>
-
-        <div class="grid2">
-          <div>
-            <label class="label" for="level">Level</label>
-            <select id="level" class="input">
-              <option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option>
-              <option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option>
-              <option value="9">9</option><option value="10">10</option><option value="11">11</option><option value="12">12</option>
-            </select>
-
-            <div class="pillRow">
-              <span class="pill">Points to spend: <strong id="points">—</strong></span>
-              <span class="pill" id="remainingPill">Remaining: <strong id="remaining">—</strong></span>
-              <span class="pill">Attribute cap (final): <strong id="cap">—</strong></span>
-              <span class="pill">Max this step: <strong id="stepCap">—</strong></span>
-            </div>
-
-            <p class="help" id="capNote" style="display:none"></p>
-            <p class="warn" id="zeroNote" style="display:none"></p>
-          </div>
-
-          <div>
-            <div class="attrTable" role="table">
-              <div class="attrHead" role="row">
-                <div role="columnheader">Attribute</div>
-                <div role="columnheader">Value</div>
-              </div>
-
-              <div class="attrGroup" role="rowgroup">
-                <div class="attrGroupHeader" role="row">Physical</div>
-
-                <div class="attrRow" data-attr="strength" role="row">
-                  <div>
-                    <div class="attrName">
-                      Strength
-                      <button class="tipBtn" type="button" aria-label="Strength mechanics" data-tip="HP scales with Strength. When you increase Strength you gain HP equal to Level + 2. Strength is also used for most melee and unarmed attacks.">ⓘ</button>
-                    </div>
-                    <div class="attrDesc">Physical power, toughness, and muscular endurance.</div>
-                  </div>
-                  <div><input class="attrInput" type="number" min="0" step="1" value="0" /></div>
-                </div>
-
-                <div class="attrRow" data-attr="agility" role="row">
-                  <div>
-                    <div class="attrName">
-                      Agility
-                      <button class="tipBtn" type="button" aria-label="Agility mechanics" data-tip="Speed = 4 + Agility. Increasing Agility increases Speed by +1. Used for most ranged attacks and many reactions (like Dodge).">ⓘ</button>
-                    </div>
-                    <div class="attrDesc">Speed, reflexes, balance, and coordination.</div>
-                  </div>
-                  <div><input class="attrInput" type="number" min="0" step="1" value="0" /></div>
-                </div>
-              </div>
-
-              <div class="attrGroup" role="rowgroup">
-                <div class="attrGroupHeader" role="row">Mental</div>
-
-                <div class="attrRow" data-attr="intellect" role="row">
-                  <div>
-                    <div class="attrName">
-                      Intellect
-                      <button class="tipBtn" type="button" aria-label="Intellect mechanics" data-tip="When you increase Intellect, you gain +2 Skill Points. Intellect is also used for Investigation actions.">ⓘ</button>
-                    </div>
-                    <div class="attrDesc">Logic, education, memory, and analytical ability.</div>
-                  </div>
-                  <div><input class="attrInput" type="number" min="0" step="1" value="0" /></div>
-                </div>
-
-                <div class="attrRow" data-attr="willpower" role="row">
-                  <div>
-                    <div class="attrName">
-                      Willpower
-                      <button class="tipBtn" type="button" aria-label="Willpower mechanics" data-tip="Willpower helps you accumulate Strain without becoming Overstrained and resist mental effects.">ⓘ</button>
-                    </div>
-                    <div class="attrDesc">Mental fortitude, discipline, and resistance to fear and stress.</div>
-                  </div>
-                  <div><input class="attrInput" type="number" min="0" step="1" value="0" /></div>
-                </div>
-              </div>
-
-              <div class="attrGroup" role="rowgroup">
-                <div class="attrGroupHeader" role="row">Spiritual</div>
-
-                <div class="attrRow" data-attr="attunement" role="row">
-                  <div>
-                    <div class="attrName">
-                      Attunement
-                      <button class="tipBtn" type="button" aria-label="Attunement mechanics" data-tip="Attunement sets your starting Power Die (outside combat, Power Die = Attunement). Increasing Attunement increases your Power Die by +1.">ⓘ</button>
-                    </div>
-                    <div class="attrDesc">Connection to Spirit Energy and the spirit world; sensing and channeling it.</div>
-                  </div>
-                  <div><input class="attrInput" type="number" min="0" step="1" value="0" /></div>
-                </div>
-
-                <div class="attrRow" data-attr="heart" role="row">
-                  <div>
-                    <div class="attrName">
-                      Heart
-                      <button class="tipBtn" type="button" aria-label="Heart mechanics" data-tip="Heart affects Bonds (you start with a number of Rank 1 bonds up to your Heart). Heart is also used for bond actions like Assist.">ⓘ</button>
-                    </div>
-                    <div class="attrDesc">Empathy, presence, courage, and social intuition.</div>
-                  </div>
-                  <div><input class="attrInput" type="number" min="0" step="1" value="0" /></div>
-                </div>
-              </div>
-            </div>
-
-            <p class="help" style="margin-top:10px;">
-              Tip: You can tweak these later, but the builder will enforce point totals and caps.
-            </p>
           </div>
         </div>
 
