--- a/public/builder.html
+++ b/public/builder.html
@@ -38,15 +38,6 @@
             <input id="charName" class="input" type="text" maxlength="64" placeholder="e.g., Kazuma" />
             <p class="help">This is the name shown on the character list and the sheet.</p>
 
-            <div style="margin-top: 14px;">
-              <label class="label" for="level">Level</label>
-              <select id="level" class="input">
-                <option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option>
-                <option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option>
-                <option value="9">9</option><option value="10">10</option><option value="11">11</option><option value="12">12</option>
-              </select>
-              <p class="help">You can change this later. Class features and feats will be shown up to your level.</p>
-            </div>
           </div>
 
           <div>
@@ -81,6 +72,7 @@
           </div>
         </div>
       </div>
+	  <div id="builderNavBottom"></div>
     </main>
 
     <script type="module" src="builder.js"></script>
